<resources>
    <string name="app_name">TRYS</string>
    <string name="text_olvide_password">Olvidaste tu contraseña</string>
    <string name="text_boton_registro">REGISTRAR</string>
    <string name="text_boton_login">LOGIN</string>
    <string name="hint_ingrese_su_name">Ingrese sus nombres</string>
    <string name="hint_last_name">Ingrese su apellido</string>
    <string name="hint_ingrese_mail">Ingrese su correo</string>
    <string name="hint_password">Ingrese su password</string>
    <string name="hint_phone">Ingrese su télefono</string>
    <string name="toolbar_regitro_client">NUEVO CLIENTE</string>
    <string name="api_key_google_maps">AIzaSyBqzy7lfHM1Bmb2ldsrvEbyBK7idFVr0t8</string>
    <string name="vacio" />
    <string name="text_boton_solicitar">SOLICITAR TAXI</string>
    <string name="text_cancelar_boton">CANCELAR</string>
    <string name="text_confirmar_boton">CONFIRMAR</string>
    <string name="string_taxi_cercano">BUSCANDO TAXI MAS CERCANO</string>
    <string name="url_create_FCM">http://192.168.1.8/TrysService/Firebase_/create_solicitud.php</string>
    <string name="hint_enter_a_message">Escriba su mensaje</string>
    <string name="instance_firebase_storage">gs://trys-19c9e.appspot.com</string>
    <string name="facebook_app_id">927690041053780</string>
    <string name="fb_login_protocol_scheme">fb[927690041053780]</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_toolbar_update_phone">Cambio de número</string>
    <string name="recibir_code">Ingrese el código que ha recibido</string>

</resources>