<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterClientActivity">
    <include
        layout="@layout/appbar_toolbar">
    </include>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/id_circleview_photo_client"
            android:layout_width="@dimen/alto_acnho_circle_view_register"
            android:layout_height="@dimen/alto_acnho_circle_view_register"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_camera"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="7dp">
        </de.hdodenhof.circleimageview.CircleImageView>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_textinput_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingrese_su_name">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_textinput_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingrese_mail"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/icono_password_login_p">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_textinput_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_textinput_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id_button_create_client"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/round_boton"
                android:backgroundTint="@color/colorPrimaryLight"
                android:text="@string/text_boton_registro"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/textsize_25sp_registro"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.coordinatorlayout.widget.CoordinatorLayout>